{
  "version": 4,
  "terraform_version": "1.3.6",
  "serial": 324,
  "lineage": "3967d6cf-d368-71d7-ca70-cb232be526f5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:internet-gateway/igw-0b9a99fda5cc80cdd",
            "id": "igw-0b9a99fda5cc80cdd",
            "owner_id": "331188050055",
            "tags": {
              "Name": "Internet-gateway"
            },
            "tags_all": {
              "Name": "Internet-gateway"
            },
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:route-table/rtb-08fe8e6cbfb1097aa",
            "id": "rtb-08fe8e6cbfb1097aa",
            "owner_id": "331188050055",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b9a99fda5cc80cdd",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "public_route_table"
            },
            "tags_all": {
              "Name": "public_route_table"
            },
            "timeouts": null,
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e4e3f1989cd56cdc",
            "route_table_id": "rtb-08fe8e6cbfb1097aa",
            "subnet_id": "subnet-0c5a196a1c2fee196"
          },
          "dependencies": [
            "aws_internet_gateway.internet_gateway",
            "aws_route_table.public",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "front",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "back",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:security-group/sg-0a2a6ed50aad98885",
            "description": "rules for back",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0a2a6ed50aad98885",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "back",
            "name_prefix": "",
            "owner_id": "331188050055",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        },
        {
          "index_key": "front",
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:security-group/sg-03a8162decafdffb5",
            "description": "rules for front",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a8162decafdffb5",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTPS from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "front",
            "name_prefix": "",
            "owner_id": "331188050055",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.back[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:331188050055:instance/i-0519f4ea6c509cf93",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "back0",
            "id": "i-0519f4ea6c509cf93",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0f8d7b06cb5e8d7e7",
            "private_dns": "ip-10-0-2-5.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.5",
            "public_dns": "ec2-63-33-70-238.eu-west-1.compute.amazonaws.com",
            "public_ip": "63.33.70.238",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:331188050055:key/328dcf99-7660-4b2f-a858-8cc61219805c",
                "throughput": 125,
                "volume_id": "vol-049368b8edfb634a5",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a43cd18542ca48af",
            "tags": {
              "Name": "back0"
            },
            "tags_all": {
              "Name": "back0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2a6ed50aad98885"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.front",
            "module.back.aws_iam_instance_profile.ec2_instance_profile",
            "module.back.aws_iam_role.ec2_instance_role",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.back[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:331188050055:instance/i-079d8522a1867fcc7",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "back1",
            "id": "i-079d8522a1867fcc7",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0dc995e093a089539",
            "private_dns": "ip-10-0-2-12.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.2.12",
            "public_dns": "ec2-3-251-238-188.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.251.238.188",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:331188050055:key/328dcf99-7660-4b2f-a858-8cc61219805c",
                "throughput": 125,
                "volume_id": "vol-05d075bd986bcd6e8",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0a43cd18542ca48af",
            "tags": {
              "Name": "back1"
            },
            "tags_all": {
              "Name": "back1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2a6ed50aad98885"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.front",
            "module.back.aws_iam_instance_profile.ec2_instance_profile",
            "module.back.aws_iam_role.ec2_instance_role",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.front[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:331188050055:instance/i-05b5bec2da9585556",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "front0",
            "id": "i-05b5bec2da9585556",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0e3473119b9fb9628",
            "private_dns": "ip-10-0-0-11.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.11",
            "public_dns": "ec2-3-253-117-21.eu-west-1.compute.amazonaws.com",
            "public_ip": "3.253.117.21",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:331188050055:key/328dcf99-7660-4b2f-a858-8cc61219805c",
                "throughput": 125,
                "volume_id": "vol-06531b6b118422ade",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5a196a1c2fee196",
            "tags": {
              "Name": "front0"
            },
            "tags_all": {
              "Name": "front0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a8162decafdffb5"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.front",
            "module.front.aws_iam_instance_profile.ec2_instance_profile",
            "module.front.aws_iam_role.ec2_instance_role",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.front[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:331188050055:instance/i-0c2380db9a9a690c3",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "front1",
            "id": "i-0c2380db9a9a690c3",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-0397a9888e6e53422",
            "private_dns": "ip-10-0-0-8.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.8",
            "public_dns": "ec2-176-34-174-125.eu-west-1.compute.amazonaws.com",
            "public_ip": "176.34.174.125",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:331188050055:key/328dcf99-7660-4b2f-a858-8cc61219805c",
                "throughput": 125,
                "volume_id": "vol-06dd655fa9c4ce3a6",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0c5a196a1c2fee196",
            "tags": {
              "Name": "front1"
            },
            "tags_all": {
              "Name": "front1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-03a8162decafdffb5"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.front",
            "module.front.aws_iam_instance_profile.ec2_instance_profile",
            "module.front.aws_iam_role.ec2_instance_role",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.middle[0]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:331188050055:instance/i-01404c0946a0ef8cf",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "middle0",
            "id": "i-01404c0946a0ef8cf",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-03429887b33257211",
            "private_dns": "ip-10-0-1-11.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.11",
            "public_dns": "ec2-54-195-27-66.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.195.27.66",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:331188050055:key/328dcf99-7660-4b2f-a858-8cc61219805c",
                "throughput": 125,
                "volume_id": "vol-0df147e8e83209877",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d7bdbcc88395bb4",
            "tags": {
              "Name": "middle0"
            },
            "tags_all": {
              "Name": "middle0"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2a6ed50aad98885"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.front",
            "module.middle.aws_iam_instance_profile.ec2_instance_profile",
            "module.middle.aws_iam_role.ec2_instance_role",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.middle[1]",
      "mode": "managed",
      "type": "aws_instance",
      "name": "server",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0333305f9719618c7",
            "arn": "arn:aws:ec2:eu-west-1:331188050055:instance/i-0fecfd5b52fdf95d1",
            "associate_public_ip_address": true,
            "availability_zone": "eu-west-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "iam_instance_profile": "middle1",
            "id": "i-0fecfd5b52fdf95d1",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "tf-key-pair",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-01437944b48e2f52f",
            "private_dns": "ip-10-0-1-10.eu-west-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.10",
            "public_dns": "ec2-54-78-84-177.eu-west-1.compute.amazonaws.com",
            "public_ip": "54.78.84.177",
            "root_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sda1",
                "encrypted": true,
                "iops": 3000,
                "kms_key_id": "arn:aws:kms:eu-west-1:331188050055:key/328dcf99-7660-4b2f-a858-8cc61219805c",
                "throughput": 125,
                "volume_id": "vol-0638c2878c71990a8",
                "volume_size": 50,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-00d7bdbcc88395bb4",
            "tags": {
              "Name": "middle1"
            },
            "tags_all": {
              "Name": "middle1"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0a2a6ed50aad98885"
            ]
          },
          "dependencies": [
            "aws_key_pair.tf-key-pair",
            "aws_security_group.front",
            "module.middle.aws_iam_instance_profile.ec2_instance_profile",
            "module.middle.aws_iam_role.ec2_instance_role",
            "module.subnet.aws_subnet.subnet",
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc",
            "tls_private_key.rsa"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"back\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:subnet/subnet-0a43cd18542ca48af",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.2.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0a43cd18542ca48af",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331188050055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "back-subnet"
            },
            "tags_all": {
              "Name": "back-subnet"
            },
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"front\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:subnet/subnet-0c5a196a1c2fee196",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.0.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c5a196a1c2fee196",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331188050055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "front-subnet"
            },
            "tags_all": {
              "Name": "front-subnet"
            },
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.subnet[\"middle\"]",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:subnet/subnet-00d7bdbcc88395bb4",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az1",
            "cidr_block": "10.0.1.0/28",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00d7bdbcc88395bb4",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "331188050055",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "middle-subnet"
            },
            "tags_all": {
              "Name": "middle-subnet"
            },
            "vpc_id": "vpc-0b23de13a8358578a"
          },
          "dependencies": [
            "module.subnet.data.aws_availability_zones.AZ",
            "module.vpc.aws_vpc.vpc"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:331188050055:vpc/vpc-0b23de13a8358578a",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-048df318b6af1591f",
            "default_route_table_id": "rtb-0268e54de57de5abb",
            "default_security_group_id": "sg-033452006daf854f3",
            "dhcp_options_id": "dopt-078a082ea4b9efaf1",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0b23de13a8358578a",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0268e54de57de5abb",
            "owner_id": "331188050055",
            "tags": {
              "Name": "test_vpc"
            },
            "tags_all": {
              "Name": "test_vpc"
            }
          }
        }
      ]
    }
  ]
}